WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111633
[GTK] Return m_inspectorFilesPath if it is not null
https://bugs.webkit.org/show_bug.cgi?id=111633
Summary
[GTK] Return m_inspectorFilesPath if it is not null
Sudarsana Nagineni (babu)
Reported
2013-03-06 15:24:44 PST
There is a missing return in InspectorClient::inspectorFilesPath().
Attachments
Patch
(1.35 KB, patch)
2013-03-06 15:29 PST
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2013-03-06 15:29:13 PST
Created
attachment 191851
[details]
Patch
Martin Robinson
Comment 2
2013-03-06 15:30:48 PST
Comment on
attachment 191851
[details]
Patch Nice catch! I don't think this one needs owner review.
WebKit Review Bot
Comment 3
2013-03-06 16:29:58 PST
Comment on
attachment 191851
[details]
Patch Clearing flags on attachment: 191851 Committed
r145002
: <
http://trac.webkit.org/changeset/145002
>
WebKit Review Bot
Comment 4
2013-03-06 16:30:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug