[GTK] Return m_inspectorFilesPath if it is not null https://bugs.webkit.org/show_bug.cgi?id=111633

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-03-06
Reviewed by Martin Robinson.

Added missing return in InspectorClient::inspectorFilesPath().

* WebCoreSupport/InspectorClientGtk.cpp:
(WebKit::InspectorClient::inspectorFilesPath):

Canonical link: https://commits.webkit.org/130010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145002 268f45cc-cd09-0410-ab3c-d52691b4dbfc